--- a/roles/static-ip/templates/01-netcfg.yml.j2
+++ b/roles/static-ip/templates/01-netcfg.yml.j2
@@ -4,7 +4,7 @@ network:
  version: 2
  renderer: networkd
  ethernets:
-   eth0:
+   enp0s2:
      dhcp4: no
      dhcp6: no
      addresses: [{{static_ip}}/24]
